--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~foundation-sites/dist/css/foundation.css";
+@import "~font-awesome/css/font-awesome.css";
+
+body {
+  color: #00252E;
+}
+
+.button {
+  border-radius: 1111px;
+  padding: 13px 50px;
+  margin-bottom: 0;
+}
+
+.button.primary {
+  background-color: #fff;
+  color: #00252E;
+  box-shadow: #E0EAEC 2px 3px 10px;
+  font-weight: bold;
+}
+
+.button.primary:hover {
+  background-color: #fff;
+box-shadow: #E0EAEC 5px 5px 10px;
+  color: #00252E;
+
+}
+
+.button.secondary {
+  background-color: #FE52C0;
+  color: #fff;
+    padding: 16px 58px;
+}
+
+
+.button.secondary:hover {
+  background-color: rgba(254, 82, 192, .8);
+  color: #fff;
+}
